--- a/app/views/games/play.html.erb
+++ b/app/views/games/play.html.erb
@@ -1,21 +1,23 @@
-<div class="game-container">
-  <%= render 'shared/flash_messages' %>
-  <div class="question-card">
-    <h2 class="question-text"><%= @question.content %></h2>
-    <%= form_with url: answer_game_path, method: :post, local: true, class: 'answer-form' do |f| %>
-      <%= f.hidden_field :question_id, value: @question.id %>
-      <div class="answers">
-        <% @question.answers.shuffle.each_with_index do |answer, index| %>
-          <div class="answer">
-            <%= f.radio_button :answer_id, answer.id, class: 'answer-input' %>
-            <%= f.label "answer_id_#{answer.id}", class: 'answer-label' do %>
-              <span class="answer-letter"><%= ('A'..'D').to_a[index] %></span>
-              <span class="answer-text"><%= answer.content %></span>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-      <%= f.submit "Submit Answer", class: "submit-button" %>
-    <% end %>
+<div class="game-background">
+  <div class="game-container">
+    <h1 class="game-title">Bible Trivia</h1>
+    <div class="question-card">
+      <h2 class="question-text"><%= @question.content %></h2>
+      <%= form_with url: answer_game_path, method: :post, local: true, class: 'answer-form' do |f| %>
+        <%= f.hidden_field :question_id, value: @question.id %>
+        <div class="answers">
+          <% @question.answers.shuffle.each_with_index do |answer, index| %>
+            <div class="answer">
+              <%= f.radio_button :answer_id, answer.id, class: 'answer-input' %>
+              <%= f.label "answer_id_#{answer.id}", class: 'answer-label' do %>
+                <span class="answer-letter"><%= ('A'..'D').to_a[index] %></span>
+                <span class="answer-text"><%= answer.content %></span>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+        <%= f.submit "Submit Answer", class: "submit-button" %>
+      <% end %>
+    </div>
   </div>
 </div>
