--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,8 @@
 <header>
   <nav>
-    <%= link_to 'Home', root_path %>
-    <%= link_to 'Categories', categories_path %>
-    <%= link_to 'Questions', questions_path %>
+    <%= link_to 'Home', root_path, class: 'nav-link' %>
+    <%= link_to 'Categories', categories_path, class: 'nav-link' %>
+    <%= link_to 'Questions', questions_path, class: 'nav-link' %>
     <%= link_to 'Play', play_game_path %>
   </nav>
 </header>
